--- a/DSPColorfulBuildGrid/DSPColorfulBuildingGrid.csproj
+++ b/DSPColorfulBuildGrid/DSPColorfulBuildingGrid.csproj
@@ -312,12 +312,16 @@
     <Error Condition="!Exists('..\packages\BepInEx.PluginInfoProps.1.1.0\build\BepInEx.PluginInfoProps.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\BepInEx.PluginInfoProps.1.1.0\build\BepInEx.PluginInfoProps.props'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "C:\Users\littlesaya\AppData\Roaming\Thunderstore Mod Manager\DataFolder\DysonSphereProgram\profiles\Default\BepInEx\plugins\Unknown-DSPColorfulBuildGrid" /Y
+    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\littlesaya\AppData\Roaming\Thunderstore Mod Manager\DataFolder\DysonSphereProgram\profiles\Default\BepInEx\plugins\Unknown-DSPColorfulBuildingGrid" /Y
+
+copy "$(TargetDir)Common.dll" "C:\Users\littlesaya\AppData\Roaming\Thunderstore Mod Manager\DataFolder\DysonSphereProgram\profiles\Default\BepInEx\plugins\Unknown-DSPColorfulBuildingGrid" /Y
 
 copy "$(ProjectDir)README.md" "$(ProjectDir)thunderstore"
 
 copy "$(TargetPath)" "$(ProjectDir)thunderstore" /Y
 
-if $(ConfigurationName) == Release (powershell Compress-Archive -Path '$(ProjectDir)thunderstore\$(TargetFileName)','$(ProjectDir)thunderstore\icon.png','$(ProjectDir)thunderstore\manifest.json','$(ProjectDir)thunderstore\README.md' -DestinationPath '$(ProjectDir)thunderstore\publish.zip' -Force)</PostBuildEvent>
+copy "$(TargetDir)Common.dll" "$(ProjectDir)thunderstore" /Y
+
+if $(ConfigurationName) == Release (powershell Compress-Archive -Path '$(ProjectDir)thunderstore\$(TargetFileName)','$(ProjectDir)thunderstore\Common.dll','$(ProjectDir)thunderstore\icon.png','$(ProjectDir)thunderstore\manifest.json','$(ProjectDir)thunderstore\README.md' -DestinationPath '$(ProjectDir)thunderstore\publish.zip' -Force)</PostBuildEvent>
   </PropertyGroup>
 </Project>
