--- a/DSPAddPlanet/DSPAddPlanet.csproj
+++ b/DSPAddPlanet/DSPAddPlanet.csproj
@@ -270,6 +270,8 @@
   <ItemGroup>
     <Compile Include="AdditionalPlanetConfig.cs" />
     <Compile Include="Extensions\PlanetRawDataExtension.cs" />
+    <Compile Include="Global.cs" />
+    <Compile Include="ILUtility.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\RectTransformExtensions.cs" />
