将配置文件的类型从纯文本改为XML格式， 添加自定义矿脉生成的参数， 将参数`gasGiant`和`GasGiant`改为可选参数，默认为`false`， 修复了抽水机会把水填上的问题

--- a/DSPAddPlanet/DSPAddPlanet.csproj
+++ b/DSPAddPlanet/DSPAddPlanet.csproj
@@ -269,6 +269,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdditionalPlanetConfig.cs" />
+    <Compile Include="ConfigUtility.cs" />
     <Compile Include="Extensions\PlanetRawDataExtension.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="ILUtility.cs" />
@@ -297,6 +298,8 @@
     <Content Include="Doc\screenshot1.jpg" />
     <Content Include="Doc\screenshot2.jpg" />
     <Content Include="Doc\screenshot3.jpg" />
+    <Content Include="Doc\screenshot4-zh-Hans.jpg" />
+    <Content Include="Doc\screenshot4.jpg" />
     <Content Include="thunderstore\icon.png" />
   </ItemGroup>
   <ItemGroup />
